--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,6 @@
 title: Mert Melih Albay
 theme: jekyll-theme-minimal
 logo: assets/images/image (1).png
+description: |
+  albaymertmelih@gmail.com
+  Çankaya/ANKARA
