--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,7 @@
 title: Mert Melih Albay
 theme: jekyll-theme-minimal
-logo: assets/images/image (1).png
+logo: assets/css/image.png
 description: |
-  
   albaymertmelih@gmail.com
-  
+  |
   Çankaya/ANKARA
