--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Mert Melih Albay
 theme: jekyll-theme-minimal
-logo: assets/css/image.png
+logo: assets/image (2).png
 description: |
   albaymertmelih@gmail.com
   |
