--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,6 @@ theme: jekyll-theme-minimal
 logo: assets/image (2).png
 description: |
   albaymertmelih@gmail.com
-  Çankaya/ANKARA  
+  Çankaya/ANKARA  |
   
   <a href="assets/MertMelihAlbay_CV.pdf" class="cv-button" download>Özgeçmişimi İndir (PDF)</a>
